--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "homepage": "https://IamAdamJFox.github.io/my-app",
+    "homepage": "https://IamAdamJFox.github.io/MYPORTFOLIO",
     "name": "react-portfolio",
     "version": "0.1.0",
     "private": true,
